--- a/index.html
+++ b/index.html
@@ -19,16 +19,12 @@
                                 </button>
                                 
                     </div>
-                 <a class="navbar-brand" href ="#"> <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Se Jin</a>
+                 <a class="navbar-brand" href ="#"> <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Se Jin</a>
                 <div class="collapse navbar-collapse" id="bs-nav-demo">
                  <ul class="nav navbar-nav">
-                    <li> <a href="#"> about me </a></li>
-                    <li> <a href="#"> Contact </a></li>
-                    <li> <a href="#"> Journal </a></li>
-                </ul>
-                <ul class = "nav navbar-nav navbar-right">
-                        <li> <a href="#"> sign up </a></li>
-                        <li> <a href="#"> login </a></li>
+                    <li> <a href="#"> <span class="glyphicon glyphicon-education" aria-hidden="true"> </span>My Resume </a></li>
+                    <li> <a href="#"> <span class="glyphicon glyphicon-user" aria-hidden="true"> </span>Contact </a></li>
+                    <li> <a href="#"> <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Journal </a></li>
                 </ul>
                 </div>
             </div>
