--- a/contact.html
+++ b/contact.html
@@ -23,24 +23,32 @@
                 <div class="collapse navbar-collapse" id="bs-nav-demo">
                  <ul class="nav navbar-nav">
                     <li> <a href="#"> <span class="glyphicon glyphicon-education" aria-hidden="true"> </span>My Resume </a></li>
-                    <li> <a href="contact.html"> <span class="glyphicon glyphicon-user" aria-hidden="true"> </span> Contact </a></li>
+                    <li> <a href="contact.html"> <span class="glyphicon glyphicon-user" aria-hidden="true"> </span>Contact </a></li>
                     <li> <a href="#"> <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Journal </a></li>
                 </ul>
                 </div>
             </div>
         </nav>
+        <div id="content">
     <div class="container">
+        <div id="List">
         <div class="row">
-            <div class="col-lg-12">
-                <div id="content">
-                <h1>Welcome to Se Jin's Blog</h1>
-                <h3>A Programmer who writes journals</h3>
-                <hr>
-                <button class="btn btn-default btn-lg"> <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> Get Started ! </button>
+            <div class="col-lg-4">
+                <h3>Be friends with me on Facebook</h3>
+                <button class="btn btn-primary btn-lg"> <a href="https://www.facebook.com/sejin.lee.7370"> Facebook  </a>  </button>
                  </div>
+            </div>
+            <div class="col-lg-4">
+                <h3>Checkout my daily photos on Instagram</h3>
+                <button class="btn btn-warning btn-lg" > <a href="http://instagram.com/sejinnny"> Instagram </a> </button>
+            </div>
+            <div class="col-lg-4">
+                <h3>See previous projects I have done </h3>
+                <a href="https://github.com/sjlee2016"> <button class="btn btn-default btn-lg"> Github </button> </a>
             </div>
         </div>
     </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" ></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
