fixed the margin

--- a/contact.html
+++ b/contact.html
@@ -29,20 +29,18 @@
                 </div>
             </div>
         </nav>
-        <div id="content">
+<div id="content">
     <div class="container">
-        <div id="List">
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-1">
                 <h3>Be friends with me on Facebook</h3>
                 <button class="btn btn-primary btn-lg"> <a href="https://www.facebook.com/sejin.lee.7370"> Facebook  </a>  </button>
                  </div>
-            </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-1">
                 <h3>Checkout my daily photos on Instagram</h3>
                 <button class="btn btn-warning btn-lg" > <a href="http://instagram.com/sejinnny"> Instagram </a> </button>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-1">
                 <h3>See previous projects I have done </h3>
                 <a href="https://github.com/sjlee2016"> <button class="btn btn-default btn-lg"> Github </button> </a>
             </div>
