--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                  <ul class="nav navbar-nav">
                     <li> <a href="#"> <span class="glyphicon glyphicon-education" aria-hidden="true"> </span>My Resume </a></li>
                     <li> <a href="contact.html"> <span class="glyphicon glyphicon-user" aria-hidden="true"> </span> Contact </a></li>
-                    <li> <a href="#"> <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Journal </a></li>
+                    <li> <a href="journal.html"> <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Journal </a></li>
                 </ul>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 <h1>Welcome to Se Jin's Blog</h1>
                 <h3>A Programmer who writes journals</h3>
                 <hr>
-                <button class="btn btn-default btn-lg"> <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> Get Started ! </button>
+                <button class="btn btn-default btn-lg"> <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> Start Reading </button>
                  </div>
             </div>
         </div>
