--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1>Welcome to Se Jin's Blog</h1>
                 <h3>A Programmer who writes journals</h3>
                 <hr>
-                <a href="journal.html">  <button class="btn btn-default btn-lg"> <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> Start Reading  </button> </a>
+                <a href="/Blog/startbootstrap-clean-blog/index.html">  <button class="btn btn-default btn-lg"> <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> Start Reading  </button> </a>
                  </div>
             </div>
         </div>
