--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div id="content">
-                <h1>Welcome to Se Jin's Blog</h1>
+                <h1>Welcome to Se Jin's Website</h1>
                 <h3>A Programmer who writes journals</h3>
                 <hr>
                 <a href="journal.html">  <button class="btn btn-default btn-lg"> <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> Start Reading  </button> </a>
