--- a/post_2018_08_24.html
+++ b/post_2018_08_24.html
@@ -62,7 +62,7 @@
               <h1>실리콘벨리 인턴십 합격후기</h1>
               <h2 class="subheading">컴퓨터공학을 전공하는 대학생이라면 모두가 꿈꾸는 실리콘벨리</h2>
               <span class="meta">Posted by
-                <a href="#">Start Bootstrap</a>
+                <a href="#"> Se Jin Lee</a>
                 on August 24, 2018</span>
             </div>
           </div>
