changed the pic

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('sky.jpeg')">
+    <header class="masthead" style="background-image: url('me.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
