--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                  <a class="navbar-brand" href ="index.html"> <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Se Jin</a>
                 <div class="collapse navbar-collapse" id="bs-nav-demo">
                  <ul class="nav navbar-nav">
-                    <li> <a href="porfolio.html"> <span class="glyphicon glyphicon-education" aria-hidden="true"> </span>My Resume </a></li>
+                    <li> <a href="portfolio.html"> <span class="glyphicon glyphicon-education" aria-hidden="true"> </span>My Resume </a></li>
                     <li> <a href="contact.html"> <span class="glyphicon glyphicon-user" aria-hidden="true"> </span> Contact </a></li>
                     <li> <a href="journal.html"> <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Journal </a></li>
                 </ul>
