--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="index.html" > Go Back to Website</a>
+			<a class="downlad-btn" href="index.html" > Go Back </a>
 			<a class="downlad-btn" href="Resume_SeJinLee.pdf" download>Download CV</a>
 		</div><!-- container -->
 	</header>
