--- a/post_2018_10_29.html
+++ b/post_2018_10_29.html
@@ -96,7 +96,7 @@
                 들어가자마자 저의 슈퍼바이저와 인사를 했어요. 스카입 인터뷰를 봤던 분인데 실제로 보니깐
                 진짜 왔다는게 실감이 났어요.
             </p>
-            <img class="img-fluid" src="desk.jpg" alt="">
+            <img class="img-fluid" src="desk.JPG" alt="">
             <p> 그리고 제 데스크를 알려주는데 가자마자
             <blockquote class="blockquote">'Playphone welcomes you to our team Se Jin! '</blockquote>
                라고 써있었어요. 정말 그냥 아무것도 아닌 말인데 team 에 한 멤버가 된 느낌이 들어서 감-동을 받았답니다...ㅋㅋㅋㅋㅋ
